# ProjectCulture

./: appinit.py  database.py  main.py  posting.py  pyproject.toml  user.py
static/css/: about.css  base.css  contact.css  explore.css  forum.css  index.css  login.css  signup.css  subscribe.css
static/js/: about.js  explore.js  forum.js  hover.js  login.js  signup.js  subscribe.js
templates/: about.html  base.html  contact.html  explore.html  forum.html  future.html  index.html  login.html  navbar.html  signup.html  subscribe.html  userpage.html
templates/regions/: africa.html  asia.html  europe.html  northAmerica.html  russia.html  southAmerica.html  unitedstates.html
templates/regions/unitedstates/: texas.html
