[tool.poetry]
name = "quizzicalcelebratedtechnicians"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-login = "^0.5.0"
flask-socketio = "^4.3.1"
pymongo = "^3.10"
dnspython = "^2.0.0"
cryptography = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
